  be removed for a long time, considering how widely it is used.

  Instead please use the more explicit ``pyfits.BinTableHDU.from_columns`` to
  create a new binary table HDU, and the similar
  ``pyfits.TableHDU.from_columns` to create a new ASCII table.  These
  otherwise accept the same arguments as ``pyfits.new_table`` which is now
  just a wrapper for these.

Other Changes and Additions
^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Warnings for deprecated APIs in PyFITS are now always displayed by default.
  This is in line with a similar change made recently to Astropy:
  https://github.com/astropy/astropy/pull/1871
  To disable PyFITS deprecation warnings in scripts one may call
  ``pyfits.ignore_deprecation_warnings()` after importing PyFITS.



3.2.1 (unreleased)
------------------

- A grab bag of minor performance improvements in headers.
  (spacetelescope/PyFITS#46)

- Fix an unrelated error that occurred when instantiating a ``ColDefs`` object
  with invalid input.

- Fixed an issue where opening an image containing pseudo-unsigned integers
  and immediately writing it to a new file using the ``writeto`` method would
  drop the scale factors that identified the data as unsigned.

- Fixed a bug where writing a file with ``checksum=True`` did not add the
  checksum on new files. (spacetelescope/PyFITS#8)

- Fixed an issue where validating an HDU's checksums removed the checksum from
  that HDU's header entirely (even if it was valid.)

- Fixed checksums on compressed images, so that the ``ZHECKSUM`` and
  ``ZDATASUM`` contain a checksum of the original image HDU, while
  ``CHECKSUM`` and ``DATASUM`` contain checksums of the compressed image HDU.
  This feature was supposed to be supported in 3.2, but the support was buggy.

- Fixed an issue where the size of the heap was sometimes not computed
  properly when writing an existing table containing variable-length array
  columns to a new FITS file.  This could result in corruption in the new FITS